<resources>
    <!--  Activity Main  -->
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <!-- Activity Login -->
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="loginEdit">Login name</string>
    <string name="passwordEdit">Password</string>
    <!--  Activity List Items  -->
    <string name="radioText">RadioButton</string>
    <string name="checkboxText">CheckBox</string>
    <string name="switchText">What does this do?</string>
    <string name="dialog_message">Finished?</string>
    <string name="dialog_title">Exit</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOFF">Switch is Off</string>
    <string name="response">ListItemsActivity passed: My information to share</string>

</resources>
