<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    android:columnCount="2"
    android:rowCount="2"
    app:layout_columnWeight="1"
    app:layout_gravity="fill"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxText" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="117dp"
        android:layout_height="62dp"
        tools:srcCompat="@android:drawable/ic_menu_camera" />

</GridLayout>